Fix overflow en pantalla

--- a/src/style-sheets/Pantalla.css
+++ b/src/style-sheets/Pantalla.css
@@ -1,10 +1,8 @@
 .input {
+	width: 360px;
 	height: 75px;
-	margin-bottom: 5px;
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-	font-size: 60px;
+	display: grid;
+	place-items: center;
 	color: white;
-	padding: 5px 20px 5px 20px;
+	margin: 5px;
 }
